--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<html>
-    <head>
-       <h1></h1>
-       <h2></h2>
-       <h3></h3>
-       <h4></h4>
-       <h5></h5>
-       <h6></h6>
-    </head>
-    <body></body>
-    </html>
+<html><head></head><body></body></html>
